# kr

./: CMakeLists.txt  README  README.md  crypto.cpp  crypto.h  grpc_client.cpp  grpc_client.h  main.cpp
http_server/: http_server.cpp  http_server.h
protos/: auth_message.proto  issuecert.proto
